# SFML-Project-Template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
